# 2DEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  texture.frag  texture.vert  更新日志.txt  项目规划.txt
include/: Camera.h  Shader.h
include/glad/: glad.h
src/: Shader.cpp  glad.c  main.cpp
